tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_deny_capturing_mut_var_as_param_to_function_in_nested_lambda/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Mutable variable x captured in lambda must be a mutable reference
  ┌─ src/main.nr:5:40
  │
5 │             let inner = || mutate(&mut x); 
  │                                        - Use '&mut' instead of 'mut' to capture a mutable variable.
  │

Aborting due to 1 previous error
